Improve async generation, expose on OpenAPI interface, update api to include latest upstream changes
